# lena

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: lena.h  lenadebugger.h  lenamanager.h  lenathreadtracer.h
src/: lena.cpp  lenamanager.cpp  lenathreadtracer.cpp
tests/: test_lena.cpp
